cluster/apps/cyberchef/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: cyberchef
  labels:
    app: cyberchef

spec:
  replicas: 1
  selector:
    matchLabels:
      app: cyberchef
  template:
    metadata:
      labels:
        app: cyberchef
    spec:
      containers:
        - name: cyberchef
          image: mpepping/cyberchef:latest
          ports:
            - name: pod-http-port
              protocol: TCP
              containerPort: 8000
          resources:
            requests:
              cpu: "200m"
              memory: "200Mi"
            limits:
              cpu: "1000m"
              memory: "800Mi"
