cluster/apps/cyberchef/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cyberchef
  labels:
    app: cyberchef

spec:
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: pod-http-port
  selector:
    app: cyberchef
