cluster/apps/cyberchef/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cyberchef
  labels:
    app: cyberchef
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.middlewares: traefik-oauth2-proxy-chain@kubernetescrd
    hajimari.io/enable: "true"
    hajimari.io/icon: "tools"

spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - cc.kblb.io
      secretName: my-certs-cyberchef
  rules:
    - host: cc.kblb.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cyberchef
                port:
                  name: http
